// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders additional padding when audio player active 1`] = `
<div
  className="background--light-primary locked-ends locked-sides scrollable soft-double-bottom offset_b736ty"
  data-status-scroll-container={true}
>
  <Meta
    title="Discover"
  />
  <div
    data-status-scroll-item={true}
    data-status-scroll-offset={-50}
    style={
      Object {
        "paddingBottom": "50px",
      }
    }
  >
    <withApollo(Connect(SearchContainerWithoutData)) />
  </div>
</div>
`;

exports[`renders with props 1`] = `
<div
  className="background--light-primary locked-ends locked-sides scrollable soft-double-bottom offset_b736ty"
  data-status-scroll-container={true}
>
  <Meta
    title="Discover"
  />
  <div
    data-status-scroll-item={true}
    data-status-scroll-offset={-50}
    style={
      Object {
        "paddingBottom": "10px",
      }
    }
  >
    <withApollo(Connect(SearchContainerWithoutData)) />
  </div>
</div>
`;
